dhcp/systemd: honor timeout for DHCPv6

https://bugzilla.gnome.org/show_bug.cgi?id=770329
(cherry picked from commit bdaa3acfc30b789e45f79934e1c3c8c3428d7864)